index.html uses correct photos, and some small changes

--- a/index.html
+++ b/index.html
@@ -25,25 +25,37 @@
             <h2>Classic Cat Hats</h2>
             <div class="gallery">
                 <div class="gallery-item">
-                    <img src="Photos/BasicHat-1.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
+                    <img src="Photos/RonaldRegularFlower3.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="Photos/AviatorHat-2.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
+                    <img src="Photos/TigerBlueBucket1.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="Photos/BasicHat-3.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
+                    <img src="Photos/RonaldPinkBucket1.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
             </div>
 
             <div class="gallery">
                 <div class="gallery-item">
-                    <img src="Photos/BunnyHat-1.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
+                    <img src="Photos/TigerSki1.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="Photos/BunnyHat-2.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
+                    <img src="Photos/RonaldRegularFlower1.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="Photos/BunnyHat-3.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
+                    <img src="Photos/TigerShark1-Corrected.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
+                </div>
+            </div>
+
+            <div class="gallery">
+                <div class="gallery-item">
+                    <img src="Photos/TigerAviator2.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
+                </div>
+                <div class="gallery-item">
+                    <img src="Photos/RonaldAviator3.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
+                </div>
+                <div class="gallery-item">
+                    <img src="Photos/TigerGraduation1.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
             </div>
         </section>
@@ -52,25 +64,37 @@
             <h2>Seasonal Styles</h2>
             <div class="gallery">
                 <div class="gallery-item">
-                    <img src="Photos/SkiHat-1.jpg" alt="Cat in a Santa hat" class="size-tall" loading="lazy">
+                    <img src="Photos/TigerFlower1.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="Photos/FlowerHat-1.jpg" alt="Cat in a pumpkin hat" class="size-tall" loading="lazy" >
+                    <img src="Photos/RonaldRegularFlower1.jpg" alt="Cat in a hat" class="size-tall" loading="lazy" >
                 </div>
                 <div class="gallery-item">
-                    <img src="Photos/SkiHat-3.jpg" alt="Cat in a sun hat" class="size-tall" loading="lazy">
+                    <img src="Photos/RonaldStrawberry1-Best.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
             </div>
 
             <div class="gallery">
                 <div class="gallery-item">
-                    <img src="Photos/FootballHat-1.jpg" alt="Cat in a Santa hat" class="size-tall"loading="lazy">
+                    <img src="Photos/TigerFootball2.jpg" alt="Cat in a hat" class="size-tall"loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="Photos/PatriotHat-1.jpg" alt="Cat in a pumpkin hat" class="size-tall"loading="lazy" >
+                    <img src="Photos/RonaldPumpkin3.jpg" alt="Cat in a hat" class="size-tall"loading="lazy" >
                 </div>
                 <div class="gallery-item">
-                    <img src="Photos/GraduationHat-1.jpg" alt="Cat in a sun hat" class="size-tall" loading="lazy">
+                    <img src="Photos/TigerFlower2.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
+                </div>
+            </div>
+
+            <div class="gallery">
+                <div class="gallery-item">
+                    <img src="Photos/RonaldPatriot1-Best.jpg" alt="Cat in a hat" class="size-tall"loading="lazy">
+                </div>
+                <div class="gallery-item">
+                    <img src="Photos/TigerSki1.jpg" alt="Cat in a hat" class="size-tall"loading="lazy" >
+                </div>
+                <div class="gallery-item">
+                    <img src="Photos/TigerBunny1.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
             </div>
         </section>
@@ -79,25 +103,25 @@
             <h2>Whimsical Wonders</h2>
             <div class="gallery">
                 <div class="gallery-item">
-                    <img src="Photos/WitchHat-1.jpg" alt="Cat in a unicorn hat" class="size-tall" loading="lazy">
+                    <img src="Photos/TigerWitch1-Best.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="Photos/ElfHat-2.jpg" alt="Cat in a wizard hat" class="size-tall" loading="lazy">
+                    <img src="Photos/TigerDinosaur2.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="Photos/StrawberryHat-2.jpg" alt="Cat in a fruit hat" class="size-tall" loading="lazy">
+                    <img src="Photos/RonaldShark2.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
             </div>
 
             <div class="gallery">
                 <div class="gallery-item">
-                    <img src="Photos/UnicornHat-1.jpg" alt="Cat in a unicorn hat" class="size-tall" loading="lazy">
+                    <img src="Photos/TigerUnicorn1-Best.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="Photos/WitchHat-2.jpg" alt="Cat in a wizard hat" class="size-tall" loading="lazy">
+                    <img src="Photos/RonaldUnicorn1-Best.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="Photos/UnicornHat-2.jpg" alt="Cat in a fruit hat" class="size-tall" loading="lazy">
+                    <img src="Photos/RonaldDinosaur2.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                     </div>
             </div>
         </section>
