downsampled photos and corrected photo order

--- a/index.html
+++ b/index.html
@@ -25,103 +25,82 @@
             <h2>Classic Cat Hats</h2>
             <div class="gallery">
                 <div class="gallery-item">
-                    <img src="Photos/RonaldRegularFlower3.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
-                </div>
-                <div class="gallery-item">
                     <img src="Photos/TigerBlueBucket1.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
                 <div class="gallery-item">
                     <img src="Photos/RonaldPinkBucket1.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
-            </div>
-
-            <div class="gallery">
                 <div class="gallery-item">
-                    <img src="Photos/TigerSki1.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
-                </div>
-                <div class="gallery-item">
-                    <img src="Photos/RonaldRegularFlower1.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
-                </div>
-                <div class="gallery-item">
-                    <img src="Photos/TigerShark1-Corrected.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
+                    <img src="Photos/TigerFlower1.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
             </div>
 
             <div class="gallery">
                 <div class="gallery-item">
-                    <img src="Photos/TigerAviator2.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
+                    <img src="Photos/TigerFootball1.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="Photos/RonaldAviator3.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
+                    <img src="Photos/TigerAviator9.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
                 <div class="gallery-item">
                     <img src="Photos/TigerGraduation1.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
             </div>
+
         </section>
 
         <section>
             <h2>Seasonal Styles</h2>
             <div class="gallery">
                 <div class="gallery-item">
-                    <img src="Photos/TigerFlower1.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
+                    <img src="Photos/TigerBunny1.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="Photos/RonaldRegularFlower1.jpg" alt="Cat in a hat" class="size-tall" loading="lazy" >
+                    <img src="Photos/RonaldChicken1-Best.jpg" alt="Cat in a hat" class="size-tall" loading="lazy" >
                 </div>
                 <div class="gallery-item">
-                    <img src="Photos/RonaldStrawberry1-Best.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
+                    <img src="Photos/RonaldPatriot1-Best.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
             </div>
 
             <div class="gallery">
                 <div class="gallery-item">
-                    <img src="Photos/TigerFootball2.jpg" alt="Cat in a hat" class="size-tall"loading="lazy">
+                    <img src="Photos/TigerWitch1-Best.jpg" alt="Cat in a hat" class="size-tall"loading="lazy">
                 </div>
                 <div class="gallery-item">
                     <img src="Photos/RonaldPumpkin3.jpg" alt="Cat in a hat" class="size-tall"loading="lazy" >
                 </div>
                 <div class="gallery-item">
-                    <img src="Photos/TigerFlower2.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
+                    <img src="Photos/RonaldElf6.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
             </div>
 
-            <div class="gallery">
-                <div class="gallery-item">
-                    <img src="Photos/RonaldPatriot1-Best.jpg" alt="Cat in a hat" class="size-tall"loading="lazy">
-                </div>
-                <div class="gallery-item">
-                    <img src="Photos/TigerSki1.jpg" alt="Cat in a hat" class="size-tall"loading="lazy" >
-                </div>
-                <div class="gallery-item">
-                    <img src="Photos/TigerBunny1.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
-                </div>
-            </div>
+            
         </section>
 
         <section>
             <h2>Whimsical Wonders</h2>
             <div class="gallery">
                 <div class="gallery-item">
-                    <img src="Photos/TigerWitch1-Best.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
+                    <img src="Photos/RonaldUnicorn1-Best.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="Photos/TigerDinosaur2.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
+                    <img src="Photos/TigerUnicorn1-Best.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="Photos/RonaldShark2.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
+                    <img src="Photos/RonaldStrawberry3.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
             </div>
 
             <div class="gallery">
                 <div class="gallery-item">
-                    <img src="Photos/TigerUnicorn1-Best.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
+                    <img src="Photos/RonaldDinosaur2-Corrected.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="Photos/RonaldUnicorn1-Best.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
+                    <img src="Photos/RonaldShark2.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="Photos/RonaldDinosaur2.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
+                    <img src="Photos/TigerPenguin1.jpg" alt="Cat in a hat" class="size-tall" loading="lazy">
                     </div>
             </div>
         </section>
